使用CodeArea替换TextArea,并初次应用css进行样式渲染

--- a/src/main/resources/static/fxml/MainPane.fxml
+++ b/src/main/resources/static/fxml/MainPane.fxml
@@ -17,7 +17,7 @@
                         <MenuItem fx:id="bjm" mnemonicParsing="false" onAction="#menuClick" text="加密" />
                     </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="JSON">
+                <Menu mnemonicParsing="false" text="格式化">
                     <items>
                         <MenuItem fx:id="jsonFormat" mnemonicParsing="false" onAction="#menuClick" text="格式化" />
                     </items>
