--- a/src/main/resources/static/fxml/EncodeAndDecodePane-TextArea.fxml
+++ b/src/main/resources/static/fxml/EncodeAndDecodePane-TextArea.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
@@ -50,7 +51,19 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
         </HBox>
-        <HBox fx:id="encodeAndDecodePane" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+        <HBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+            <children>
+                <TextArea fx:id="rawTextArea" wrapText="true" HBox.hgrow="ALWAYS">
+                    <HBox.margin>
+                        <Insets />
+                    </HBox.margin>
+                </TextArea>
+                <TextArea fx:id="retTextArea" wrapText="true" HBox.hgrow="ALWAYS">
+                    <HBox.margin>
+                        <Insets left="5.0" />
+                    </HBox.margin>
+                </TextArea>
+            </children>
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" />
             </padding>
