--- a/src/main/resources/static/fxml/JsonFormatPane.fxml
+++ b/src/main/resources/static/fxml/JsonFormatPane.fxml
@@ -2,15 +2,29 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="jsonFormatPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.satan.menu.json.JsonFormatController">
+<VBox fx:id="jsonFormatPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.satan.menu.json.JsonFormatController">
     <children>
-        <HBox VBox.vgrow="NEVER">
+        <HBox prefHeight="33.0" prefWidth="1162.0" VBox.vgrow="NEVER">
             <children>
-                <Button fx:id="jsonFormatBtn" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" onAction="#jsonFormat" text="格式化" />
+            <Label text="规则:">
+               <HBox.margin>
+                  <Insets right="5.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </Label>
+            <ComboBox fx:id="convertorComboBox" prefWidth="150.0">
+               <HBox.margin>
+                  <Insets right="5.0" />
+               </HBox.margin>
+            </ComboBox>
+                <Button fx:id="jsonFormatBtn" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" onAction="#jsonFormat" text="转换" />
                 <Button mnemonicParsing="false" onAction="#jsonPress" text="压缩" HBox.hgrow="ALWAYS">
                     <HBox.margin>
                         <Insets left="5.0" />
@@ -26,25 +40,10 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
         </HBox>
-        <HBox layoutX="10.0" layoutY="10.0" VBox.vgrow="ALWAYS">
+        <HBox fx:id="rawJsonPane" layoutX="10.0" layoutY="10.0" VBox.vgrow="ALWAYS">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
-         <children>
-            <HBox fx:id="rawJsonPane" HBox.hgrow="ALWAYS">
-               <children>
-                  <TextArea fx:id="rawJsonTextArea" HBox.hgrow="ALWAYS" />
-               </children>
-            </HBox>
-            <HBox fx:id="formatJsonPane" prefHeight="210.0" prefWidth="651.0" HBox.hgrow="ALWAYS">
-               <children>
-                  <TextArea fx:id="retJsonTextArea" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-               </children>
-               <padding>
-                  <Insets left="5.0" />
-               </padding>
-            </HBox>
-         </children>
         </HBox>
     </children>
 </VBox>
